fix fullscreen for li codeblocks and pre tags - undos #10782 - wraps li codeblocks with `div.highlight` - wraps pre tags with `div.highlight` in articles - adds `.highlight` class to pre tags in artricles

--- a/app/assets/stylesheets/components/syntax.scss
+++ b/app/assets/stylesheets/components/syntax.scss
@@ -12,9 +12,7 @@
 }
 
 pre:not(.highlight),
-div.highlight,
-li pre.highlight,
-blockquote pre.highlight {
+div.highlight {
   background: var(--syntax-background-color);
   color: var(--syntax-text-color);
   font-size: 80%;
